<resources>
    <string name="app_name">Lists</string>
    <string name="simple_list_text">Simple List</string>
    <string name="generated_view_text">Generated View</string>
    <string name="empty_text" />
    <string name="layout_inflater_text">LayoutInflater</string>
    <string name="relative_layout_text">RelativeLayout:</string>
    <string name="linear_layout_text">LinearLayout:</string>
    <string name="name_people">Name:</string>
    <string name="custom_item_text">Custom Item</string>
    <string name="chose_info_text">Chose Info</string>
    <string name="single_choice_text_button">Single Choice</string>
    <string name="multiple_choice_text">Multiple Choice</string>
    <string name="listeners_in_list_text">Listeners in List</string>
    <string name="add_data_text">Add Data</string>
    <string name="remove_data_text">Remove Data</string>
    <string name="simple_list_adapter_text">Simple List Adapter</string>
    <string name="text_image_text">Text Image</string>
    <string name="view_binder_text">View Binder</string>
    <string name="header_and_footer">Header and Footer</string>
    <string name="header_text">header</string>
    <string name="footer_text">footer</string>
    <string name="spinner">Spinner</string>
    <string name="grid_view_text">Grid View</string>
    <string name="expandable_list_view">Expandable ListView</string>
    <string name="list_fragment">List Fragment</string>
    <string name="no_data_text">No Data</string>
    <string name="number_list">Number list</string>
    <string name="list_dialog_text">List Dialog</string>
    <string name="items">Items</string>
    <string name="adapter">Adapter</string>
    <string name="action_mode_list">Action mode list</string>
    <string name="menu_1">menu_1</string>
    <string name="menu_2">menu_2</string>
    <string name="menu_3">menu_3</string>
    <string name="menu_4">menu_4</string>
</resources>
