<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_menu_1"
        app:showAsAction="always"
        android:title="@string/menu_1"/>

    <item
        android:id="@+id/item_menu_2"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/menu_2"/>

    <item
        android:id="@+id/item_menu_3"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="ifRoom"
        android:title="@string/menu_3"/>

    <item
        android:id="@+id/item_menu_4"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_4"/>

</menu>